--- a/README
+++ b/README
@@ -44,3 +44,7 @@ git branch
 
 como crear ramas
  git checkout -b nombreDelaRama
+
+cat nombreArchivo.txt para ver toda la informacion del archivos
+
+como pasar informacion de las ramas
